--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>yes</title>
-  </head>
-  <body>
-    <h1>yes</h1>
-    <p>poog</p>
-  </body>
+<title>Test</title>
+<body>
+
+<h1>Heading</h1>
+<p>Paragraph</p>
+
+</body>
 </html>
