main to wednesday

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <h1>Heading</h1>
 <p>Paragraph</p>
 
+
 </body>
+<a href="https://aydenlyons.github.io/Wednesday/index.html">Wednesday Page</a>
 Ayden
 </html>
