added font style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <title>Test</title>
 <body>
 
-<h1>Heading</h1>
+<h1>Heading <link rel="stylesheet" type="text/css" href="styles.css"></h1>
 <p>Paragraph</p>
 
-
 </body>
+
 <a href="https://aydenlyons.github.io/Wednesday/index.html">Wednesday Page</a>
 Ayden
 </html>
