--- a/Wednesday/index.html
+++ b/Wednesday/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Wednesday Page</title>
 
-<a style="font: 400"></a>
+<h1><a style="font: 400"></a>HEADING</h1>
 
 </head>
 
