--- a/Wednesday/index.html
+++ b/Wednesday/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>Wednesday Page</title>
 
-<h1><a style="font: 400"></a>HEADING</h1>
+<h1>
+    <a style="font: 400"></a>HEADING</h1>
 
 </head>
 
