--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Test</title>
 <body>
 
+    <img scr="https://ih1.redbubble.net/image.562071085.0576/flat,1000x1000,075,f.jpg">
+
 <h1>Heading <link rel="stylesheet" type="text/css" href="styles.css"></h1>
 <p>Paragraph</p>
 
