--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Test</title>
 <body>
 
-    <img scr="https://ih1.redbubble.net/image.562071085.0576/flat,1000x1000,075,f.jpg" alt="smile" width="500" height="600">
+    <img src="https://ih1.redbubble.net/image.562071085.0576/flat,1000x1000,075,f.jpg" alt="smile" width="500" height="600">
 
 <h1>Heading <link rel="stylesheet" type="text/css" href="styles.css"></h1>
 <p>Paragraph</p>
